# backtester

./: .env  LICENSE  README.md  api.py  backtest_dao.py  backtester.py  dao.py  fire_squared.r  flatfire-theory-1.md  pyproject.toml  settings.py  test_api.py  test_backtest_dao.py  test_backtester.py  test_dao.py  test_utils.py  test_visualization.py  utils.py  visualization.py
templayes/: performance.html
