[project]
name = "flatfire"
version = "0.2.0"
description = "advanced signlaing event processor"
authors = [
    {name = "Matt Morganstein",email = "morgansteinmatthew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
